# sber_statement

./: .gitignore  LICENSE  README.md  parse.py  pyproject.toml  requirements.txt
.github/workflows/: test.yml
tests/: test_csv_writer.py  test_parser.py  test_validator.py
